src/mermaid/ascii/sequence/snapshots/veol__mermaid__ascii__sequence__render__tests__render_with_nested_blocks.snap
---
source: src/mermaid/ascii/sequence/render.rs
expression: out
---
┌───┐     ┌───┐
│ A │     │ B │
└─┬─┘     └─┬─┘
┌─ loop: outer ──┐
  │ a       │
  ├────────►│
┌─ opt: inner ──┐
  │ b       │
  ├────────►│
└─┴─────────┴───┘
└─┴─────────┴────┘
  │         │
