src/mermaid/ascii/sequence/snapshots/veol__mermaid__ascii__sequence__render__tests__render_with_note_left.snap
---
source: src/mermaid/ascii/sequence/render.rs
expression: out
---
┌───┐     ┌───┐
│ A │     │ B │
└─┬─┘     └─┬─┘
  │ hi      │
  ├────────►│
┌────────┐
│ aside  │
└────────┘
  │         │
