src/mermaid/ascii/sequence/snapshots/veol__mermaid__ascii__sequence__render__tests__render_with_note_right.snap
---
source: src/mermaid/ascii/sequence/render.rs
expression: out
---
┌───┐     ┌───┐
│ A │     │ B │
└─┬─┘     └─┬─┘
  │ hi      │
  ├────────►│
             ┌──────────┐
             │ comment  │
             └──────────┘
  │         │
