src/mermaid/ascii/sequence/snapshots/veol__mermaid__ascii__sequence__render__tests__render_with_par_block.snap
---
source: src/mermaid/ascii/sequence/render.rs
expression: out
---
┌───┐     ┌───┐     ┌───┐
│ A │     │ B │     │ C │
└─┬─┘     └─┬─┘     └─┬─┘
┌─ par: work ─────────┬─┐
  │ x       │         │
  ├────────►│         │
├─ else: more ────────┼─┤
  │         │ y       │
  │         ├────────►│
└─┴─────────┴─────────┴─┘
  │         │         │
